misc: Additional test cruft cleanup with new utilities